<?xml version="1.0"?>
<package format="2">
    <name>min_udp</name>
    <version>0.0.0</version>
    <description>The robot package</description>

    <maintainer email="qrpucp@qq.com">Haoyu Wang</maintainer>
    <license>TODO</license>
    <author email="qrpucp@qq.com">Haoyu Wang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

</package>
